# tree-sitter-ada

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.txt  Makefile  Package.swift  README.md  README.txt  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-ada.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ada/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAda/: ada.h
bindings/swift/TreeSitterAdaTests/: TreeSitterAdaTests.swift
corpus/: access.txt  arrays.txt  attributes.txt  generics.txt  packages.txt  records.txt  renames.txt  separates.txt  statements.txt  subprograms.txt  tasking.txt  types.txt
queries/: folds.scm  highlights.scm  locals.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: access.txt  allocators.txt  arrays.txt  attributes.txt  choices.txt  for_loops.txt  generics.txt  literals.txt  packages.txt  parallel_block_statement.txt  pragmas.txt  preprocessor.txt  protected.txt  records.txt  renames.txt  separates.txt  statements.txt  subprograms.txt  tasking.txt  types.txt
